crates/eure-macros/tests/compile_fail/via_missing_from_eure_impl_tuple_variant.rs
use eure::FromEure;

struct JumpAt;
struct JumpAtProxy;

#[derive(FromEure)]
enum Cmd {
    Jump(usize, #[eure(via = "JumpAtProxy")] JumpAt),
}

fn main() {}
